--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
 </head>
 <body>
     
 
-    <div id="app">{{ message }}</div>
+    <div id="app">
+        <div v-for="email in mail" :key="email">
+          {{ email }}
+        </div>
+      </div>
 
 
 
